@@ -1,3 +1,11 @@
+2009-10-06  David Faure  <faure@kde.org>
+
+	* freedesktop.org.xml.in: Add kexi mimetypes (from #18109)
+	even though the xdgmime bug mentionned in #18109 isn't fixed.
+	* tests/list:
+	* tests/sqlite2.kexi:
+	* tests/sqlite3.kexi: Add testcase for kexi mimetypes.
+
 2009-10-06  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in:
